--- a/Scripts/newsapp/templates/global.css
+++ b/Scripts/newsapp/templates/global.css
@@ -40,3 +40,34 @@
 
     border-radius: 5px;
 }
+
+/* Slide over notes */
+
+.slideover{
+    width: 300px;
+    height: 100vh;
+    border-style: none solid none none;
+    border-width: 12px;
+    border-color: rgb(246, 194, 68);
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    transform: translateX(-300px);
+    transition: transform 0.6s ease;
+}
+
+.note-card {
+    /* Add shadows to create the "card" effect */
+    width: 250px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+
+    margin: 30px;
+
+    padding: 32px;
+
+    border-radius: 10px;
+}
