articles can be opened up and redirect to their own page

--- a/Scripts/newsapp/articles/templates/articles/article_list.html
+++ b/Scripts/newsapp/articles/templates/articles/article_list.html
@@ -21,7 +21,7 @@
                 {% if article.img %}
                     <img src="{{ article.img.url }}">
                 {% endif %}
-                <h2><a href="#">{{ article.name }}</a></h2>
+                <h2><a href="{% url 'articles:details' article.slug %}">{{ article.name }}</a></h2>
                 <p>{{ article.snippet }}</p>
             </div>
         {% endfor %}
