--- a/Scripts/newsapp/templates/global.css
+++ b/Scripts/newsapp/templates/global.css
@@ -51,12 +51,29 @@
     border-color: rgb(246, 194, 68);
     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
 
+    background-color: white;
+
     position: fixed;
     top: 0;
     left: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 
     transform: translateX(-300px);
     transition: transform 0.6s ease;
+
+    z-index: 999;
+}
+
+.slideover::-webkit-scrollbar {
+    display: none; /* Other browesers hide scrollbar */
+}
+
+.notes{
+    position: static;
 }
 
 .note-card {
@@ -70,4 +87,109 @@
     padding: 32px;
 
     border-radius: 10px;
+}
+
+.full-page {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: grey;
+    z-index: 3;
+    opacity: 0.7;
+    visibility: hidden;
+    display: none;
+    transition: 2s;
+  }
+
+#slide-box {
+    display: none;
+}
+
+.slide-box-label {
+    display: block;
+    position: fixed;
+    top: 300px;
+    left: 300px;
+    z-index: 99;
+    
+}
+
+.slide-box-label-menu {
+    display: block;
+    position: fixed;
+    top: 300px;
+    left: 300px;
+    z-index: 99;
+    
+}
+
+#slide-box:checked ~ div.slideover {
+    transform: translate(0px);
+  }
+
+#slide-box:checked ~ div.full-page {
+    display: block;
+    animation: fadeIn;
+    -webkit-animation: fadeIn ease 1s;
+    -moz-animation: fadeIn ease 1s;
+    -o-animation: fadeIn ease 1s;
+    -ms-animation: fadeIn ease 1s;
+    visibility: visible;
+    z-index: 998;
+}
+#slide-box:checked ~ html {
+    overflow: hidden;
+  }
+
+@keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:0.7;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:0.7;
+    }
+}
+@-webkit-keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:0.7;
+    }
+}
+  
+@-o-keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:0.7;
+    }
+}
+  
+@-ms-keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:0.7;
+  }
+}
+
+
+.test{
+    background-color: aqua;
+    width: 500px;
+    height: 200vh;
 }
