--- a/Scripts/newsapp/assets/article_list.css
+++ b/Scripts/newsapp/assets/article_list.css
@@ -1,15 +1,33 @@
 .article {
     /* Add shadows to create the "card" effect */
-    height: 450px;
+    /* height: 450px; */
     width: 300px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 
-    padding: 32px;
-
     margin: 30px;
 
     border-radius: 10px;
+
+    overflow: hidden;
+}
+
+.snippetTitle{
+    margin: 16px 0 6px 0px;
+}
+
+.snippet{
+    margin: 6px 12px;
+}
+
+.card-buttons{
+    margin: 12px 12px 12px 12px;
+}
+
+.img{
+    width:100%;
+    height:150px;
+    object-fit: cover;
     overflow: hidden;
 }
 
@@ -37,10 +55,12 @@
 }
 
 .tag {
-    margin-top: 16px;
+    margin-top: 6pxpx;
     margin-left: 6px;
 
     margin-right: 6px;
+
+    margin-bottom: 12px;
 
     padding: 3px 5px 3px 5px;
 
@@ -50,4 +70,10 @@
 .search {
     border: 0;
     border-radius: 5px;
+}
+
+.thumb{
+  width: 200px;
+  height: 300px;
+  object-fit: cover;
 }
