--- a/Scripts/newsapp/articles/templates/articles/article_list.html
+++ b/Scripts/newsapp/articles/templates/articles/article_list.html
@@ -6,10 +6,40 @@
 {% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="{% static 'article_list.css' %}">
+<link rel="stylesheet" href={% static 'global.css' %}>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 {% endblock %}
 {% block content %}
+
+<input type="checkbox" id="slide-box">
+
+<div class="slideover">
+    <label for="slide-box" class="btn btn-link" style="padding: 16px 0 0 6px;color:green;">
+        < Hide
+    </label>
+
+    <h1 style="padding: 0px 0 16px 16px;">Notes</h1>
+
+    <div class="notes">
+        {% for note in notes %}
+        <div class="note">
+             <div class="flex-container">
+                 <div class="note-card">
+                    <h3>{{note.user_id}}</h3>
+
+                    <br />
+
+                    <div>
+                        {{note.about}}
+                    </div>
+                </div>
+             </div>
+        </div>
+        {%endfor%}
+    </div>
+</div>
+
 <a href="" class="btn">Sign Out</a> <a href="" class="btn">Profile Settings</a>
 <div class="jumbotron">
     <center>
@@ -29,8 +59,9 @@
         <a href="" class="btn btn-link">#sit</a>
     </div>
 
-
-    <a href="" class="btn btn-warning">View notes</a>
+    <label for="slide-box" class="btn btn-warning">
+        View notes
+    </label>
 </div>
 
 <div class="articles">
@@ -69,4 +100,13 @@
     </div>
     {% endfor %}
 </div>
+
+<script src="http://code.jquery.com/jquery-3.3.1.min.js"
+integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+crossorigin="anonymous"></script>
 {% endblock %}
