images look great!

--- a/Scripts/newsapp/articles/templates/articles/article_list.html
+++ b/Scripts/newsapp/articles/templates/articles/article_list.html
@@ -68,9 +68,7 @@
     {% for article in articles %}
     <div class="article">
 
-        <div class="img">
-            <img src="{{ article.img.url }}">
-        </div>
+        <img class="img" src="{{ article.img.url }}">
 
 
         <center class="flex-card-container">
