got rid of unnecessary admin functions

--- a/Scripts/newsapp/articles/templates/articles/article_list.html
+++ b/Scripts/newsapp/articles/templates/articles/article_list.html
@@ -80,12 +80,12 @@
             <div class="snippet">
                 {{article.snippet}}
             </div>
-            <div class="card-buttons">
+            <!-- <div class="card-buttons">
                 <a href="" class="btn btn-success">See Reviews</a>
                 <a href="" class="btn btn-success">Add/Edit</a>
-            </div>
-
+            </div> -->
         </center>
+        
         <div class="tag-container">
             <div class="tag" style="color:#087a04;background-color:#d3f5d2;">
                 #lorem
