Ironed out bugs

--- a/Scripts/newsapp/articles/templates/articles/article_list.html
+++ b/Scripts/newsapp/articles/templates/articles/article_list.html
@@ -73,7 +73,7 @@
 
         <center class="flex-card-container">
             <h3 class="snippetTitle">
-                <a href="{% url 'articles:details' article.slug %}">
+                <a class="snippetTitle" href="{% url 'articles:details' article.slug %}">
                     {{article.snippetTitle}}
                 </a>
             </h3>
