--- a/Scripts/newsapp/assets/global.css
+++ b/Scripts/newsapp/assets/global.css
@@ -9,7 +9,24 @@
     padding: 32px;
 
     border-radius: 10px;
+
+    background-color: white;
 }
+
+.article-card-img{
+  width:100%;
+  height:60vh;
+  margin-bottom: -20vh;
+
+  z-index: 1;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.hi{
+  z-index: 999;
+}
+
 
 /* Add some padding inside the card container */
 .flex-container {
@@ -39,6 +56,14 @@
     padding: 3px 5px 3px 5px;
 
     border-radius: 5px;
+}
+
+
+.article-tag {
+  margin: 0 6px;
+  padding: 3px 5px 3px 5px;
+
+  border-radius: 5px;
 }
 
 /* Slide over notes */
