--- a/Scripts/newsapp/assets/article_list.css
+++ b/Scripts/newsapp/assets/article_list.css
@@ -12,6 +12,44 @@
     overflow: hidden;
 }
 
+.feedback-box{
+    width: 100vw;
+    transition: 0.3s;
+
+    display: flex;
+    flex-flow: row wrap;
+
+    margin: 0 30px;
+
+    border-radius: 10px;
+
+    overflow: hidden;
+}
+
+.comment-card{
+    width: 700px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+
+    margin: 0 30px;
+
+    border-radius: 10px;
+
+    overflow: hidden;
+}
+
+.rating-card{
+    width: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+
+    margin: 0  30px;
+
+    border-radius: 10px;
+
+    overflow: hidden;
+}
+
 .snippetTitle{
     margin: 16px 0 6px 0px;
 }
@@ -70,10 +108,4 @@
 .search {
     border: 0;
     border-radius: 5px;
-}
-
-.thumb{
-  width: 200px;
-  height: 300px;
-  object-fit: cover;
 }
