--- a/Scripts/newsapp/articles/templates/articles/article_list.html
+++ b/Scripts/newsapp/articles/templates/articles/article_list.html
@@ -89,6 +89,9 @@
         </center>
         
         <div class="tag-container">
+            <div class="tag" style="color:#135686;background-color:#b3d7f1;">
+                {{ article.newsSource }}
+            </div>
             <div class="tag" style="color:#087a04;background-color:#d3f5d2;">
                 #{{ article.topic }}
             </div>
