--- a/Scripts/newsapp/articles/templates/articles/article_list.html
+++ b/Scripts/newsapp/articles/templates/articles/article_list.html
@@ -19,12 +19,7 @@
         < Hide
     </label>
 
-    <div style="display: flex;justify-content: space-between;align-items: center;">
-        <h1 style="padding: 0px 0 16px 16px;">Notes</h1>
-        <a href="{% url 'articles:note_create' %}" class="btn btn-link" style="text-decoration: none;padding: 0 20px 16px 6px;margin-bottom: 6px;font-size: 30px;">+</a>
-    </div>
-
-    
+    <h1 style="padding: 0px 0 16px 16px;">Notes</h1>
 
     <div class="notes">
         {% for note in notes %}
@@ -41,29 +36,32 @@
                 </div>
              </div>
         </div>
-        {% endfor %}
+        {%endfor%}
     </div>
 </div>
 
-<a href="" class="btn">Sign Out</a> <a href="" class="btn">Profile Settings</a>
+    <form action="{% url 'accounts:logout'%}" method="post">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+    </form>
+
+<a href="" class="btn">Profile Settings</a>
 <div class="jumbotron">
     <center>
         <h1>471 News Aggregator</h1>
         <br />
-        <form method=POST action="{% url 'articles:search_results' %}">
-            {% csrf_token %}
-            <input class="search" name="search" type="text" placeholder="Search by title" size="50" value="{{request.GET.name}}">
-            <input class="btn btn-link" style="color:green;" type="submit" value="Submit">
-        </form>
+        <input class="search" type="text" placeholder="Search" size="50">
+        <a href="" class="btn btn-link" style="color:green;">Submit</a>
     </center>
 </div>
 
 <div style="margin:16px;display:flex;justify-content: space-between;">
     <div>
         Filter by topic:
-        {% for topic in topics %}
-            <a href="{% url 'articles:filter_results' topic.name %}" class="btn btn-link">#{{ topic.name }}</a>
-        {% endfor %}
+        <a href="" class="btn btn-link">#lorem</a>
+        <a href="" class="btn btn-link">#ipsum</a>
+        <a href="" class="btn btn-link">#dolor</a>
+        <a href="" class="btn btn-link">#sit</a>
     </div>
 
     <label for="slide-box" class="btn btn-warning">
@@ -80,7 +78,7 @@
 
         <center class="flex-card-container">
             <h3 class="snippetTitle">
-                <a class="snippetTitle" href="{% url 'articles:details' article.slug %}">
+                <a href="{% url 'articles:details' article.slug %}">
                     {{article.snippetTitle}}
                 </a>
             </h3>
@@ -94,11 +92,14 @@
         </center>
         
         <div class="tag-container">
-            <div class="tag" style="color:#135686;background-color:#b3d7f1;">
-                {{ article.newsSource }}
-            </div>
             <div class="tag" style="color:#087a04;background-color:#d3f5d2;">
-                #{{ article.topic }}
+                #lorem
+            </div>
+            <div class="tag" style="color:#be1d1d;background-color:#f1c5c5;">
+                #ipsum
+            </div>
+            <div class="tag" style="color:#135686;background-color:#b3d7f1;">
+                #dolor
             </div>
         </div>
     </div>
