--- a/Scripts/newsapp/assets/article_list.css
+++ b/Scripts/newsapp/assets/article_list.css
@@ -17,9 +17,11 @@
     transition: 0.3s;
 
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
 
-    margin: 0 30px;
+    justify-content: space-evenly;
+
+    margin: 0 30px 30px;
 
     border-radius: 10px;
 
@@ -27,11 +29,11 @@
 }
 
 .comment-card{
-    width: 700px;
+    width: 50%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 
-    margin: 0 30px;
+    padding: 20px;
 
     border-radius: 10px;
 
@@ -39,11 +41,11 @@
 }
 
 .rating-card{
-    width: 300px;
+    width: 40%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 
-    margin: 0  30px;
+    padding: 20px;
 
     border-radius: 10px;
 
