--- a/Scripts/newsapp/articles/templates/articles/article_details.html
+++ b/Scripts/newsapp/articles/templates/articles/article_details.html
@@ -54,14 +54,14 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
             <div class="rating-card hi">
                 <div style="display: flex;justify-content: space-between;align-items: center;">
                     <h1 style="padding: 0px 0 16px 16px;">Ratings</h1>
-                    <a href="{% url 'articles:note_create' %}" class="btn btn-link" style="text-decoration: none;padding: 0 20px 16px 6px;margin-bottom: 6px;font-size: 30px;">+</a>
+                    <a href="{% url 'articles:rating_create' %}" class="btn btn-link" style="text-decoration: none;padding: 0 20px 16px 6px;margin-bottom: 6px;font-size: 30px;">+</a>
                 </div>
                 
                 {% for rating in ratings %}
                 <hr/>
                 <div>
                     {% if rating.refer_to_friend %}
-                    <p>POSITIVE</p>
+                    <p>Would reccomend</p>
                     {% endif %}
                     {{ rating.rating }}
                 </div>
@@ -71,12 +71,19 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
             <div class="comment-card hi">
                 <div style="display: flex;justify-content: space-between;align-items: center;">
                     <h1 style="padding: 0px 0 16px 16px;">Comments</h1>
-                    <a href="{% url 'articles:note_create' %}" class="btn btn-link" style="text-decoration: none;padding: 0 20px 16px 6px;margin-bottom: 6px;font-size: 30px;">+</a>
+                    <a href="{% url 'articles:comment_create' %}" class="btn btn-link" style="text-decoration: none;padding: 0 20px 16px 6px;margin-bottom: 6px;font-size: 30px;">+</a>
                 </div>
                 {% for comment in comments %}
                 <hr/>
                 <div>
-                    {% if article.id != comment.article_id %}
+                    {{ article.name }}
+                    {{ comment.article_id}}
+
+
+                    {% if article.name != comment.article_id %}
+                        
+                    {% endif %}
+                    {% if article.name == comment.article_id %}
                         {{ comment.comment }}
                     {% endif %}
                 </div>
